:bug: fixed overflow issue

--- a/index.scss
+++ b/index.scss
@@ -12,6 +12,7 @@ body {
   background-color: $bg-color;
   font-family: sans-serif;
   color: $tx-color;
+  width: 100vw;
   overflow-x: hidden;
 }
 
@@ -64,7 +65,7 @@ section {
     top: 50%;
     transform: translateY(-50%);
     height: 100%;
-    width: 100%;
+    width: 250px;
     background-color: $bg-blue;
     z-index: 1;
   }
